all overflow fixed

--- a/frontend/src/components/AllGroups/index.css
+++ b/frontend/src/components/AllGroups/index.css
@@ -54,6 +54,7 @@
     border-top: 3px inset gray;
     border-left: 3px inset gray;
     margin: 10px;
+    overflow: hidden;
 }
 
 .indivgroups:hover {
